--- a/Zeyun_Chatbot.ipynb
+++ b/Zeyun_Chatbot.ipynb
@@ -972,7 +972,7 @@
         "    keywords = {\n",
         "                'deaths': ['death', 'dead', 'die','deaths','death number'], \n",
         "                'recovered': ['recovery', 'recover','recovered'], \n",
-        "                'new_cases': ['increase', 'new case','grow','growing','growth'],\n",
+        "                'new_cases': ['increase', 'new cases','grow','growing','growth','new case'],\n",
         "                'confirmed':['cumulative','all','overall','total','confirmed'],\n",
         "                'active' : ['active', 'active cases'],\n",
         "                'critical':['critical','severe','dying'],\n",
